ie11 flex item overflowing fix

--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -39,6 +39,11 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+
+        .intro-text {
+            max-width: 100%;
+            box-sizing: border-box;
+        }
     }
 }
 .columns.solutions {
